--- a/assets/style.css
+++ b/assets/style.css
@@ -83,7 +83,12 @@ html, body{
 .main-section-about{
   background-color: #F6F6F6;
 }  
-
+.massage-benefits-section {
+  background-color: #33472B;
+}
+.massage-benefits-content p{
+  background-color: #F6F6F6;
+}
 
 /*-------------------------------------------> Footer */
 
@@ -173,6 +178,20 @@ background-color:  #33472B;
     margin-right: 15px;
 }
 
+.facilities-timetable #navTab a:hover,
+.facilities-timetable #navTab a:active,
+.facilities-timetable #navTab a:focus,
+.facilities-timetable #navTab a:active:focus {
+    color:#080808;
+    text-decoration: none;
+    background-color:#FAFAFA;
+}
+.nav-tabs .nav-link {
+  background-color: #3A462C;
+  margin: 4px;
+  color:#FAFAFA;
+}
+
 /*------------------------------------------------>Banner-Images-Containers */
 .hero-container{
   height: 80vh;
@@ -182,7 +201,7 @@ background-color:  #33472B;
   position: relative;
 }
 
- .banner-facial{
+ .banner-facial-massage{
    background:url("images/facial-treatment02.png") fixed center center no-repeat;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -190,14 +209,14 @@ background-color:  #33472B;
   background-size: cover;
 
  }
- .banner-bamboo{
+ .banner-bamboo-massage{
   background:url("images/massage-treatment-02.jpeg") fixed center center no-repeat;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
  }
- .sauna-banner{
+ .banner-sauna{
   background:url("images/sauna-banner-image.jpg") fixed center center no-repeat;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -205,7 +224,7 @@ background-color:  #33472B;
   background-size: cover;
  }
 
-.banner-facilities {
+.banner-facilities-page {
   background:url("images/facilities-hero-image.jpg") fixed center center no-repeat;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -213,7 +232,7 @@ background-color:  #33472B;
   background-size: cover;
  
 }
-.home-image {
+.banner-home-page {
   background:url("images/spapicture.jpeg") fixed center center no-repeat;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -221,7 +240,7 @@ background-color:  #33472B;
   background-size: cover;
  
 }
-.services-image{
+.banner-services-page{
   background:url("images/services-image.jpg") fixed center center no-repeat;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -230,14 +249,14 @@ background-color:  #33472B;
 
 }
 
-.banner-contact{
+.banner-contact-page{
   background:url("images/contact-hero-image.jpg") fixed center center no-repeat;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
 }
-.body-treatment-container{
+.banner-body-treatment{
   background:url("images/massage-treatment-01.jpeg") fixed center center no-repeat;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -253,24 +272,11 @@ background-color:  #33472B;
   background-size: cover;
 
 }
-
 .hero-images-headings{
   color:#F6F6F6;
   font-weight: bold;
 }
-.facilities-timetable #navTab a:hover,
-.facilities-timetable #navTab a:active,
-.facilities-timetable #navTab a:focus,
-.facilities-timetable #navTab a:active:focus {
-    color:#1F2324ff;
-    text-decoration: none;
-    background-color:#F6F6F6;
-}
-.nav-tabs .nav-link {
-  background-color:  #33472B;
-  margin: 4px;
-  color:#F6F6F6;
-}
+
 
 /*------------------------------------------------>Font Awesome & Badges */
 .fa-clock{
@@ -312,9 +318,13 @@ background-color:  #33472B;
   font-size:30px;
 }
 
-
+/* -----------------------------------------Services Page */
 .services-info {
   flex-grow: 1;
+}
+.card-container {
+  display:flex;
+  flex-direction:column;
 }
 .card-title{
   font-size:20px;
@@ -322,20 +332,8 @@ background-color:  #33472B;
   color:#1F2324;
 }
 
-.card-container {
-  display:flex;
-  flex-direction:column;
-}
 
 
-
-.massage-benefits-section {
-  background-color: #33472B;
-  box-shadow: #1F2324;
-}
-.massage-benefits-content p{
-  background-color: #F6F6F6;
-}
 .benefits-heading{
   font-family:'Oswald', sans-serif;
   font-weight: 400;
@@ -343,10 +341,13 @@ background-color:  #33472B;
   color:#F6F6F6;
 }
 
+
+
+
 .subheading-massage-benefits{
   font-family:'Oswald', sans-serif;
   margin-bottom: 20px;
-  font-weight: 400px;
+  font-weight: 400;
   font-size:25px;
  
 }
