--- a/assets/style.css
+++ b/assets/style.css
@@ -131,14 +131,15 @@ list-style-type: none;
 }
 
 .footer-area .list-inline .list-inline-item a{
-  border-color:rgb(39, 34, 34);
+  border-color:#272222;
   font-size: 20px;
+  text-align: center;
 }
 .footer-area .list-inline .list-inline-item a i{
   margin-left:10px;
   font-size: 20px;
   color:#F6F6F6;
-  transition: 0.4s all;
+  transition: 0.6s all;
 }
 .list-inline-item i:hover {
   transform: scale(1.4);
@@ -344,6 +345,7 @@ background-color:  #33472B;
 
 
 
+
 .subheading-massage-benefits{
   font-family:'Oswald', sans-serif;
   margin-bottom: 20px;
@@ -367,8 +369,17 @@ background-color:  #33472B;
 .modal-two-title{
   color:green;
 }
-
-
+@media only screen and (max-width: 600px) {
+  .list-inline {
+    margin-left:10px;
+  }
+}
+@media only screen and (max-width:600px) {
+  .services-headings {
+    margin-top:50%;
+    padding:10px;
+  }
+}
 
 
 
